Changed jsx build to react

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "module": "esnext",
     "moduleResolution": "node",
     "noImplicitAny": true,
-    "jsx": "preserve",
+    "jsx": "react",
     "outDir": "dist",
     "declaration": true
   },
