--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-financial-charts": "^1.3.2"
   },
   "devDependencies": {
+    "@types/d3-shape": "^3.0.2",
     "@types/react": "^17.0.38",
     "typescript": "^4.5.4"
   }
